Updated swagger documentation & modified status codes in user controllers
